# social-events-api

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
authentication/: urls.py
config/: celery.py  settings.py  urls.py
events/: admin.py  constants.py  filters.py  models.py  serializers.py  urls.py  views.py
events/locale/de/LC_MESSAGES/: django.po
events/locale/es/LC_MESSAGES/: django.po
events/locale/fr/LC_MESSAGES/: django.po
events/locale/pl/LC_MESSAGES/: django.po
events/migrations/: 0001_initial.py  0002_event_banner_event_organizers_event_participants.py  0003_alter_event_banner.py  0004_event_recurrences_alter_event_banner.py  0005_location_latitude_location_longitude_and_more.py  0006_alter_event_location_alter_location_latitude_and_more.py  0007_event_group.py  0008_remove_event_access_event_type.py
messagebox/: admin.py  apps.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
messagebox/migrations/: 0001_initial.py  0002_message_deleted_by_receiver_and_more.py  0003_message_thread_or_receiver_set.py  0004_alter_message_deleted_by_receiver_and_more.py  0005_alter_message_deleted_by_receiver.py  0006_messagethread_deleted_by_users.py  0007_alter_messagethread_deleted_by_users.py  0008_messagethread_name.py  0009_alter_messagethread_name.py  0010_alter_message_receiver_alter_message_sender.py  0011_alter_message_deleted_by_receiver.py
messagebox/tests/: conftest.py  test_message_thread_view.py  test_message_view.py  test_models.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_friends_user_profile_picture_usergroup.py  0003_user_birth_date_alter_user_profile_picture.py  0004_alter_user_profile_picture.py  0005_alter_user_options_alter_user_friends.py  0006_alter_user_managers.py  0006_usergroup_description.py  0007_alter_user_options.py  0008_usergroup_is_deleted.py
users/tests/: conftest.py  test_models.py  test_user_view.py  test_usergroup_view.py  test_views.py
users/tests/test_api/: conftest.py
