[tool.poetry]
name = "social-events-api"
version = "0.1.0"
description = ""
authors = ["Karol Gajda <karol.gajda97@gmail.com>"]
readme = "README.md"
packages = [{include = "social_events_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^3.8.1"
celery = "^5.2.7"
drf-spectacular = "^0.25.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
django-stubs = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
